<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usertype"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="159dp"
        android:layout_marginTop="5dp"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/register" />

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_login"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="364dp"
        android:ems="10"
        android:hint="@string/enterReg"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/authtext"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/enterLogin"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/authtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/auth" />

    <TextView
        android:id="@+id/trashtalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="18dp"
        android:text="@string/doneBy" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/edit_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="-66dp"
        android:layout_marginTop="65dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_alignLeft="@id/edit_pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="-68dp"
        android:layout_marginTop="116dp"
        android:text="@string/password" />

    <Spinner
        android:id="@+id/usertype"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_pass"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="259dp"
        android:layout_marginTop="155dp"
        android:entries="@array/usertype" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_pass"
        android:layout_alignLeft="@id/usertype"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="127dp"
        android:layout_marginLeft="-132dp"
        android:layout_marginTop="160dp"
        android:text="@string/usertype" />

</RelativeLayout>