<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/greenBack"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#009790"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="1dp" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="340dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile"
            tools:srcCompat="@drawable/user_profile_png_high_quality_image"
            tools:visibility="visible" />

        <Button
            android:id="@+id/toTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="436dp"
            android:text="@string/helperWithMeds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greenBack" />

        <Button
            android:id="@+id/addNewMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/addNewMed"
            app:layout_constraintBottom_toTopOf="@+id/toTest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greenBack"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="235dp"
            android:layout_height="244dp"
            app:layout_constraintBottom_toTopOf="@+id/addNewMed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greenBack"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/preview" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="369dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:text="@string/referenceMain"
            android:textAlignment="center"
            android:textColor="#356C33"
            android:textSize="19sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/referenceMainDown"
            android:textColor="#356C33"
            android:textSize="25sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>