<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reference">

    <ImageView
        android:id="@+id/greenBack"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#009790"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="1dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/referenceMain"
        android:textAlignment="center"
        android:textColor="#356C33"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenBack" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:srcCompat="?attr/actionModeCloseDrawable"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="358dp"
        android:layout_height="265dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="15dp"
        android:text="@string/referenceDesc"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/doneBy"
        android:layout_width="356dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:text="@string/doneByRef"
        android:textColor="#009790"
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>